--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "start": "node ./bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,7 +15,9 @@
     "express-session": "^1.17.0",
     "http": "0.0.0",
     "mongoose": "^5.7.12",
+    "morgan": "^1.9.1",
     "path": "^0.12.7",
+    "serve-favicon": "^2.5.0",
     "serve-static": "^1.14.1"
   },
   "description": ""
